<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/sbb_main" />


        <!-- PERSONAL INFORMATION -->

        <TextView
            style="@style/BlockTitle"
            android:text="@string/segment_title_one" />

        <EditText
            android:id="@+id/input_text_name"
            style="@style/GeneralEditTextViews"
            android:hint="@string/input_text_hint_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/input_text_email"
            style="@style/GeneralEditTextViews"
            android:hint="@string/input_text_hint_email"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/checkbox_receive_email"
            style="@style/GeneralCheckBoxViews"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/checkbox_receive_email_summary" />


        <!-- QUIZ -->

        <TextView
            style="@style/BlockTitle"
            android:text="@string/segment_title_two" />

        <!-- Two Checkbox Questions -->

        <TextView
            style="@style/GeneralQuestion"
            android:text="@string/question_one" />

        <CheckBox
            android:id="@+id/question_one_answer_a"
            style="@style/GeneralCheckBoxViews"
            android:text="@string/question_one_answer_a" />

        <CheckBox
            android:id="@+id/question_one_answer_b"
            style="@style/GeneralCheckBoxViews"
            android:text="@string/question_one_answer_b" />

        <CheckBox
            android:id="@+id/question_one_answer_c"
            style="@style/GeneralCheckBoxViews"
            android:text="@string/question_one_answer_c" />

        <CheckBox
            android:id="@+id/question_one_answer_d"
            style="@style/GeneralCheckBoxViews"
            android:text="@string/question_one_answer_d" />


        <TextView
            style="@style/GeneralQuestion"
            android:text="@string/question_two" />

        <CheckBox
            android:id="@+id/question_two_answer_a"
            style="@style/GeneralCheckBoxViews"
            android:text="@string/question_two_answer_a" />

        <CheckBox
            android:id="@+id/question_two_answer_b"
            style="@style/GeneralCheckBoxViews"
            android:text="@string/question_two_answer_b" />

        <CheckBox
            android:id="@+id/question_two_answer_c"
            style="@style/GeneralCheckBoxViews"
            android:text="@string/question_two_answer_c" />

        <CheckBox
            android:id="@+id/question_two_answer_d"
            style="@style/GeneralCheckBoxViews"
            android:text="@string/question_two_answer_d" />

        <!-- Two RadioButton Questions -->

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/GeneralQuestion"
                android:text="@string/question_three" />

            <RadioButton
                android:id="@+id/question_three_answer_a"
                style="@style/GeneralRadioButton"
                android:text="@string/question_three_answer_a" />

            <RadioButton
                android:id="@+id/question_three_answer_b"
                style="@style/GeneralRadioButton"
                android:text="@string/question_three_answer_b" />

            <RadioButton
                android:id="@+id/question_three_answer_c"
                style="@style/GeneralRadioButton"
                android:text="@string/question_three_answer_c" />

            <RadioButton
                android:id="@+id/question_three_answer_d"
                style="@style/GeneralRadioButton"
                android:text="@string/question_three_answer_d" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/GeneralQuestion"
                android:text="@string/question_four" />

            <RadioButton
                android:id="@+id/question_four_answer_a"
                style="@style/GeneralRadioButton"
                android:text="@string/question_four_answer_a" />

            <RadioButton
                android:id="@+id/question_four_answer_b"
                style="@style/GeneralRadioButton"
                android:text="@string/question_four_answer_b" />

            <RadioButton
                android:id="@+id/question_four_answer_c"
                style="@style/GeneralRadioButton"
                android:text="@string/question_four_answer_c" />

            <RadioButton
                android:id="@+id/question_four_answer_d"
                style="@style/GeneralRadioButton"
                android:text="@string/question_four_answer_d" />
        </RadioGroup>

        <!-- Two FreeText Questions -->


        <TextView
            style="@style/GeneralQuestion"
            android:text="@string/question_five" />

        <EditText
            android:id="@+id/input_text_question_five"
            style="@style/GeneralEditTextViews"
            android:hint="@string/multiline_input_hint"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/GeneralQuestion"
            android:text="@string/question_six" />

        <EditText
            android:id="@+id/input_text_question_six"
            style="@style/GeneralEditTextViews"
            android:hint="@string/multiline_input_hint"
            android:inputType="textMultiLine" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/summary_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/activity_margin"
                android:textSize="20sp"
                android:text="@string/summaryReview"/>

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_below="@id/summary_text_view"
                android:padding="10dp"
                android:tag="0"
                android:onClick="submitQuiz"
                android:layout_centerHorizontal="true"
                android:text="@string/submint_button" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>